plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}

group 'net.beast462.int2204'
version '1.0.0'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.8.0'
}

java {
    sourceCompatibility = JavaVersion.VERSION_16
    targetCompatibility = JavaVersion.VERSION_16
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'net.beast462.int2204.mimir'
    mainClass = 'net.beast462.int2204.mimir.Main'
}

javafx {
    version = '16'
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics']
}

dependencies {
    implementation group: 'org.kordamp.ikonli', name: 'ikonli-javafx', version: '12.2.0'
    implementation group: 'org.kordamp.ikonli', name: 'ikonli-fontawesome5-pack', version: '12.2.0'
    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.8.11.2'
    implementation group: 'com.jfoenix', name: 'jfoenix', version: '9.0.3'

    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: junitVersion
    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: junitVersion
}

test {
    useJUnitPlatform()
}

jar {
    manifest {
        attributes 'Main-Class': application.getMainClass().get()
    }
}

run {
    mainClassName = application.getMainClass().get()

    applicationDefaultJvmArgs += [
            '--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix',
            '--add-exports=javafx.base/com.sun.javafx.event=com.jfoenix',
            '--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix',
            '--add-exports=javafx.graphics/com.sun.javafx.scene=com.jfoenix',
            '--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix',
            '--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix'
    ]
}